[gd_scene load_steps=6 format=3 uid="uid://bfmgalkkbdevq"]

[ext_resource type="Texture2D" uid="uid://db3fxyk3jkid4" path="res://assets/icon.svg" id="1_0ubkq"]
[ext_resource type="Script" path="res://scenes/triangle_spawner.gd" id="1_3x03k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5jbh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6x8e"]
size = Vector2(13, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mwt4"]
size = Vector2(180, 100)

[node name="TriangleSpawner" type="Node2D" groups=["object_spawners"]]
script = ExtResource("1_3x03k")
triangle_scene_path = "res://scenes/triangle.tscn"

[node name="Visual" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.254902)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_0ubkq")
metadata/_edit_lock_ = true

[node name="Tooltip" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -90.0
offset_top = -50.0
offset_right = 90.0
offset_bottom = 50.0
mouse_filter = 1

[node name="Background" type="ColorRect" parent="Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.203922)

[node name="CenterContainer" type="CenterContainer" parent="Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Triangle"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -4
text = "Generates 1 Polygon/Sec
Cost - 50 Polygons"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0.564706, 1)
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_5jbh3")
text = "Purchase Triangle"
flat = true

[node name="EnterCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterCollision"]
shape = SubResource("RectangleShape2D_a6x8e")

[node name="ExitCollision" type="Area2D" parent="."]
position = Vector2(-96, -51)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitCollision"]
position = Vector2(96, 51)
shape = SubResource("RectangleShape2D_4mwt4")

[node name="PriceNotificationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Tooltip/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="EnterCollision" to="." method="_on_enter_collision_mouse_entered"]
[connection signal="mouse_exited" from="ExitCollision" to="." method="_on_exit_collision_mouse_exited"]
[connection signal="timeout" from="PriceNotificationTimer" to="." method="_on_price_notification_timer_timeout"]
